<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ComandaActivity!</string>
    <string name="app_name">Comanda</string>
    <string name="you_are_at_table">Table:</string>
    <string name="order_placed">Order sucessfully sent</string>
    <string name="read_qr_code">I am on the restaurant</string>
    <string name="comanda_logo_img_desc">Comanda logo</string>
    <string name="at_restaurant">Restaurant:</string>
    <string name="ok">OK</string>
    <string name="error_while_placing_order">An error occurred while placing your order. Please try again later</string>
    <string name="please_enter_phone">Please enter your phone number:</string>
    <string name="incorrect_phone_number">This phone number you entered is not valid</string>
    <string name="place_order">Add to order</string>
    <string name="menu_item_name">Name:</string>
    <string name="choose_restaurant">Restaurants</string>
    <string name="order_food">I want to order a delivery</string>
    <string name="select_delivery_address">Send to...</string>
    <string name="add_new_address">Add new address</string>
    <string name="enter_address_details">Enter you address below:</string>
    <string name="nice_address_hint">Street, number, city&#8230;</string>
    <string name="address_additional_data">Extras (floor number, door&#8230;)</string>
    <string name="add_address_button">OK</string>
    <string name="new_address_dialog_title">New address</string>
    <string name="back">Back</string>
    <string name="commit_order">Commit order</string>
    <string name="remove_item">Remove</string>
    <string name="review_order">Review order</string>
    <string name="restaurant_image">Restaurant image</string>
    <string name="menu_item_image">Menu item image</string>
    <string name="review_order_dialog_title">Current order</string>
    <string name="review_deliveries_button">Review orders</string>
    <string name="empty_address_list">No addresses found. Please click on button to add new address</string>
    <string name="total_amount">Total:</string>
    <string name="no_orders">There are no orders</string>
    <string name="you_can_create_a_new_order">You can place an order by selecting \"Delivery\" on the initial screen</string>
    <string name="today_at">Today</string>
    <string name="yesterday_at">Yesterday at</string>
    <string name="empty_restaurant_list">Sorry, at them moment there are no restaurants that serve to the selected address</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="retrieving_data">Retrieving data&#8230;</string>
    <string name="street_name">Street:</string>
    <string name="inputCity">City:</string>
    <string name="inputNumber">Number:</string>
    <string name="inputAddressAdditionalData">Additional data (floor, door, etc.):</string>
    <string name="orderSent">Placed. Waiting for response</string>
    <string name="orderAcceptedEstimatedTime">Delivery estimated at:</string>
    <string name="orderRejected">Rejected</string>
    <string name="refresh_list">Refresh list</string>
    <string name="order_details">Order details</string>
    <string name="restaurant_name">Restaurant:</string>
    <string name="order_date">Order date:</string>
    <string name="state">State:</string>
    <string name="delvery_address">Delivery address:</string>
    <string name="items">Items:</string>
    <string name="order_details">Order details:</string>
    <string name="choose_qualifier">Choose size:</string>
    <string name="qualSmall">Small</string>
    <string name="qualMedium">Medium</string>
    <string name="qualLarge">Large</string>
    <string name="qualTapa">Tapa</string>
    <string name="qualHalf">Half</string>
    <string name="qualFull">Full</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="choose">Choose</string>
    <string name="done">Done</string>
    <string name="orderRejectedOffDuty">Out of schedule</string>
    <string name="orderRejectedNoDeliveryThere">Out of delivery area</string>
    <string name="orderRejectedNotEnoughForDelivery">Insufficient amount</string>
    <string name="orderRejectedUnknownAddress">Unknown address</string>
    <string name="orderRejectedOutOfSomething">Out of goods</string>
    <string name="orderRejectedOverload">Restaurant\'s overload</string>
    <string name="delivery_cost">Delivery cost:</string>
    <string name="minimum_order">Minimum order:</string>
    <string name="cannotPlaceOrder">Could not place order</string>
    <string name="underMinimumForDelivery1">The minimum amount for delivery is</string>
    <string name="numberForAddress">, numero</string>
    
</resources>