<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="290dip"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street_name"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etAddressStreet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputNumber"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etAddressNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="phone" >
        </EditText>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputAddressAdditionalData"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etAddressAdditionalData"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputCity"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etAddressCity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPostalAddress" />

        <Button
            android:id="@+id/buttonSubmitNewAddress"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:text="@string/add_address_button" />
    </LinearLayout>

</ScrollView>