<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_delivery_address" />

    </LinearLayout>

    

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

    </ListView>

    <TextView 
        android:id="@android:id/empty"
        android:layout_height="50dip"
        android:layout_width="wrap_content"
        android:text="@string/empty_address_list"
        />
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
    <Button
        android:id="@+id/new_address_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_address" />
    </LinearLayout>
</LinearLayout>