<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="400dip"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvRestaurantName"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/textView6"
            android:text="@string/restaurant_name" />

        <TextView
            android:id="@+id/tvRestaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView1"
            android:layout_marginLeft="10dp"
            android:text="TextView"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvOrderDate"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:text="@string/order_date" />

        <TextView
            android:id="@+id/tvOrderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvRestaurantName"
            android:layout_below="@+id/tvRestaurantName"
            android:layout_toRightOf="@+id/textView2"
            android:text="TextView" 
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvState"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:text="@string/state" />

        <TextView
        android:id="@+id/tvState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvOrderDate"
            android:layout_below="@+id/tvOrderDate"
            android:layout_toRightOf="@+id/textView4"
        android:text="TextView" 
        android:textSize="20dp"/>
    
        <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignBaseline="@+id/tvDeliveryAddress"
        android:layout_below="@+id/textView4"
            
        android:text="@string/delvery_address" />

    <TextView
        android:id="@+id/tvDeliveryAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/textView6"
            android:layout_below="@+id/tvState"
            android:layout_alignLeft="@+id/tvState"
            
        android:text="TextView" 
        android:textSize="20dp"/>
    
    </RelativeLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/items"
        android:textSize="20dp" />

    <ListView
        android:id="@+id/listViewOrders"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@drawable/rectangle" >

    </ListView>

</LinearLayout>