<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:padding="6dip">
    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginRight="6dip"
        android:contentDescription="@string/restaurant_image"
        android:src="@drawable/ic_launcher" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/toptext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="20dp"
            android:text="Restaurante"
        />

        <LinearLayout
            android:id="@+id/minimumOrderPanel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/toptext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/minimum_order" />

            <TextView
                android:id="@+id/tvMinimumOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" 
                android:textColor="#ffff6400"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/deliveryCostPanel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/delivery_cost" />

            <TextView
                android:id="@+id/tvDeliveryCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#ffff6400" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>